# Hackathon-II-Phase-V-Todo-Full-Stack-Web-Application_with_chat_bot

./: .gitignore  CLAUDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_AI_TOOLS.md  QWEN.md  README.md  TROUBLESHOOTING.md  auth_utils.py  deploy_to_cloud_run.bat  deploy_to_cloud_run.sh  deploy_to_gcp.sh  docker-compose.prod.yml  docker-compose.yml  gcp-deployment-guide.md  gcp-free-tier-deployment.md  main.py  pyproject.toml  run_server.py  test_api.py  test_cors.py  verify_deployment.sh
.github/workflows/: deploy.yaml
.qwen/: fastapi-development.md  phase4-deployment-skill.md  skills.md
.qwen/agents/: API_Client_Agent.md  Authentication_Agent.md  Backend_Agent.md  chat-endpoint-specialist.md  chatkit-frontend-specialist.md  dapr-kafka-setup-agent.md  docker-manager.md  frontend_agent.md  mcp-server-specialist.md  minikube-troubleshooter.md  ntegration_Tester_Agent.md  openai-agents-sdk-specialist.md  oracle-query-solver.md  phase-iii-orchestrator.md  phase4-deployment-skill.md  tasks_crud_agent.md
.specify/memory/: constitution.md
backend/: .dockerignore  Dockerfile  README.md  app.py  auth.py  db.py  deps.py  exceptions.py  initialize_db.py  main.py  mcp_server.py  migrate_database.py  models.py  requirements.txt  settings.py  start_app.py  test_dapr_pubsub.py  update_tags_schema.py  verify_db.py
dapr/: config.yaml
frontend/: .dockerignore  App.jsx  Dockerfile  Dockerfile.optimized  next.config.js  package-lock.json  package.json  tailwind.config.js  test-types.ts  tsconfig.json  tsconfig.tsbuildinfo  types.d.ts
src/: __main__.py  entry_point.py
(+436 files in other folders)
